--- a/css/_componentes/_globales.scss
+++ b/css/_componentes/_globales.scss
@@ -1,17 +1,19 @@
 $font-titles: 'Lato', sans-serif;
 $font-text: 'Oswald', sans-serif;
+//$primary-color: #ffffff;
 $primary-color: #333333;
 $secondary-color: #8841DA;
 $variation-color: #3F579A;
+//$light-color: #333333;
 $light-color: #ffffff;
 $dark-color: #000000;
 
 @mixin caja {
-	width: 60%;
+	width: 50%;
     border-radius: 26px;
     box-shadow: 0px 10px 33px 0px $primary-color;
     color: $primary-color;
-    background-color: $light-color;
+    background-color: rgba($light-color,.80);
 }
 @mixin titulos($fuentes){
 	@if $fuentes == $font-titles{
@@ -42,6 +44,9 @@ $dark-color: #000000;
 body {
 	margin: 0;
 	@include titulos($font-titles);
+	background-color: rgba($secondary-color,.15);
+	//background-color: $light-color;
+	//color: white;
 }
 
 main {
