--- a/css/ejercicio-sass.css
+++ b/css/ejercicio-sass.css
@@ -21,6 +21,7 @@ h3 {
 body {
   margin: 0;
   font-family: "Lato", sans-serif;
+  background-color: rgba(136, 65, 218, 0.15);
 }
 
 main {
@@ -86,12 +87,12 @@ main {
   margin: 0 auto;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  width: 60%;
+  width: 50%;
   border-radius: 26px;
   -webkit-box-shadow: 0px 10px 33px 0px #333333;
           box-shadow: 0px 10px 33px 0px #333333;
   color: #333333;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .estadistica--perfil h3 {
   font-weight: 600;
@@ -121,12 +122,12 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 60%;
+  width: 50%;
   border-radius: 26px;
   -webkit-box-shadow: 0px 10px 33px 0px #333333;
           box-shadow: 0px 10px 33px 0px #333333;
   color: #333333;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .ubicacion--perfil > *:nth-child(1) {
@@ -166,7 +167,7 @@ main {
   grid-area: 1/1/3/2;
   text-align: right;
   padding-right: 10px;
-  font-size: 60px;
+  font-size: 45px;
   color: #3F579A;
 }
 .ubicacion--perfil h2 {
@@ -199,30 +200,121 @@ main {
 .galeria {
   height: 250px;
   margin: 10px auto;
-  padding: 20px 0 0 30px;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  width: 60%;
+  width: 50%;
   border-radius: 26px;
   -webkit-box-shadow: 0px 10px 33px 0px #333333;
           box-shadow: 0px 10px 33px 0px #333333;
   color: #333333;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-grid-columns: 0.5fr 0.8fr 0.35fr 1fr;
+  grid-template-columns: 0.5fr 0.8fr 0.35fr 1fr;
+  -ms-grid-rows: 50px 80px 110px;
+  grid-template-rows: 50px 80px 110px;
+}
+
+.galeria > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+
+.galeria > *:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+}
+
+.galeria > *:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+
+.galeria > *:nth-child(4) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 4;
+}
+
+.galeria > *:nth-child(5) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+}
+
+.galeria > *:nth-child(6) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+}
+
+.galeria > *:nth-child(7) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+}
+
+.galeria > *:nth-child(8) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 4;
+}
+
+.galeria > *:nth-child(9) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}
+
+.galeria > *:nth-child(10) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+}
+
+.galeria > *:nth-child(11) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+}
+
+.galeria > *:nth-child(12) {
+  -ms-grid-row: 3;
+  -ms-grid-column: 4;
 }
 .galeria__foto-principal {
-  float: left;
-  margin-right: 10px;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 2/1/4/3;
+  text-align: right;
+  padding: 0 10px 0 0;
 }
-.galeria__foto.adicionales {
-  height: 70px;
-  margin-right: 5px;
-  margin-bottom: 5px;
+.galeria__fotos-uno {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-area: 2/3/3/5;
+}
+.galeria__fotos-dos {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-area: 3/3/4/4;
+}
+.galeria__fotos-tres {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-area: 3/4/4/5;
 }
 .galeria h2 {
-  margin-bottom: 10px;
   font-weight: 600;
   font-size: 20px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-area: 1/1/2/5;
+  text-align: center;
+  padding-top: 10px;
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
 }
